force-app/main/default/objects/Money_Transfer__c/Money_Transfer__c.object-meta.xml
<CustomObject>
    <label>Money Transfer</label>
    <nameField>
        <displayFormat>TX-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Money Transfers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>