force-app/main/default/objects/Money_Transfer__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Money Transfers</relationshipLabel>
    <relationshipName>Money_Transfers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>