force-app/main/default/objects/Money_Transfer__c/fields/From_Account__c.field-meta.xml
<CustomField>
    <fullName>From_Account__c</fullName>
    <label>From Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking - x0032</fullName>
            </value>
            <value>
                <fullName>Brokerage - x7365</fullName>
            </value>
            <value>
                <fullName>National Bank [EXTERNAL]</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>